# geo

./: CMakeLists.txt  Config.cmake.in  build.sh
.github/workflows/: github-actions.yml
docs/: doxyfile
docs/html/: AABBoxNode_8hpp.html  AABBoxNode_8hpp__incl.map  AABBoxNode_8hpp__incl.md5  AABBox_8hpp.html  AABBox_8hpp__dep__incl.map  AABBox_8hpp__dep__incl.md5  AABBox_8hpp__incl.map  AABBox_8hpp__incl.md5  AbsBoundableObject_8hpp.html  AbsBoundableObject_8hpp.js  AbsBoundableObject_8hpp__dep__incl.map  AbsBoundableObject_8hpp__dep__incl.md5  AbsBoundableObject_8hpp__incl.map  AbsBoundableObject_8hpp__incl.md5  AbsCell_8hpp.html  AbsCell_8hpp__dep__incl.map  AbsCell_8hpp__dep__incl.md5  AbsCell_8hpp__incl.map  AbsCell_8hpp__incl.md5  AbsMarchingPrimitives_8hpp.html  AbsMarchingPrimitives_8hpp.js  AbsMarchingPrimitives_8hpp__dep__incl.map  AbsMarchingPrimitives_8hpp__dep__incl.md5  AbsMarchingPrimitives_8hpp__incl.map  AbsMarchingPrimitives_8hpp__incl.md5  BinaryOperator_8hpp.html  BinaryOperator_8hpp__dep__incl.map  BinaryOperator_8hpp__dep__incl.md5  BinaryOperator_8hpp__incl.map  BinaryOperator_8hpp__incl.md5  Box_8hpp.html  Box_8hpp.js  Box_8hpp__dep__incl.map  Box_8hpp__dep__incl.md5  Box_8hpp__incl.map  Box_8hpp__incl.md5  CartesianGridSampler_8hpp.html  CartesianGridSampler_8hpp__incl.map  CartesianGridSampler_8hpp__incl.md5  CartesianGrid_8hpp.html  (+840 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+120 more)
python/bindings/: denseMatrixConversion.hpp  python_geo.cpp  sparseMatrixConversion.hpp  trees.cpp  trees.hpp
python/modules/geo/: __init__.py  spacetree.py
python/modules/splinekernel/: __init__.py  appSpline2D.py  appSurface.py  canvas.py  splinekernel.py  splinesurfacevisual.py  splinevisual.py  surfacekernel.py
python/scripts/: cstree.py  interpolateWithBSplineCurve.py  laplaceProblem.py  meshCircle.py  meshSquare.py  minimumDisc.py  minimumDiscGL.py  plotBSplineBasis.py  plotBSplineBasis2D.py  plotBSplineCurve.py  plotBSplineCurveDeBoor.py  plotBSplineSurface.py  splineBuilder.py  splineGL.py  splineSurface.py
test/: geo_testrunner.cpp
